--- a/slideShow.html
+++ b/slideShow.html
@@ -19,6 +19,14 @@
             position: relative;
             overflow: hidden;
         }
+        .slide-container {
+            width: 100%;
+            height: 100%;
+            position: absolute;
+            top: 0;
+            left: 0;
+            text-align: center;
+        }
         .slide {
             width: 100%;
             height: 100%;
@@ -26,6 +34,15 @@
             position: absolute;
             top: 0;
             left: 0;
+        }
+        .caption {
+            position: absolute;
+            bottom: 20px;
+            width: 100%;
+            color: white;
+            font-size: 20px;
+            text-shadow: 1px 1px 2px black;
+            line-height: 1.2;
         }
         .arrow {
             position: absolute;
@@ -64,10 +81,22 @@
 <body>
 
 <main>
-    <img src="image-1.jpg" alt="" class="slide">
-    <img src="image-2.jpg" alt="" class="slide">
-    <img src="image-3.jpg" alt="" class="slide">
-    <img src="image-4.jpg" alt="" class="slide">
+    <div class="slide-container">
+        <img src="image-1.jpg" alt="" class="slide">
+        <div class="caption">All About Stars<br>Stars are too beautifull</div>
+    </div>
+    <div class="slide-container">
+        <img src="image-2.jpg" alt="" class="slide">
+        <div class="caption">Sunset View<br>Sunset view is too beautifull</div>
+    </div>
+    <div class="slide-container">
+        <img src="image-3.jpg" alt="" class="slide">
+        <div class="caption">Cycling<br>Cycling in Streets</div>
+    </div>
+    <div class="slide-container">
+        <img src="image-4.jpg" alt="" class="slide">
+        <div class="caption">All About Flowers<br>Flowers Flowers Flowers</div>
+    </div>
 
     <button class="arrow left" onclick="goPrev()">&#10094;</button>
     <button class="arrow right" onclick="goNext()">&#10095;</button>
@@ -75,8 +104,9 @@
 
 <div class="dots"></div>
 
-<script>
+<script type="text/javascript">
     const slides = document.querySelectorAll(".slide");
+    const captions = document.querySelectorAll(".caption");
     const dotsContainer = document.querySelector(".dots");
     let counter = 0;
 
@@ -115,9 +145,18 @@
             slide.style.transform = `translateX(-${counter * 100}%)`;
         });
         updateDots();
+        updateCaptions();
     };
 
+    const updateCaptions = () => {
+        captions.forEach((caption, index) => {
+            caption.style.display = (index === counter) ? 'block' : 'none';
+        });
+    };
+
+    // Initialize dots and captions
     updateDots();
+    updateCaptions();
 </script>
 </body>
 </html>
